# sagemcom_fast_exporter

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  client.rs  error.rs  exporter_metrics.rs  main.rs  metrics.rs  scraper.rs
tests/: scraper_test.rs
